Set theme jekyll-theme-cayman

--- a/_config.yml
+++ b/_config.yml
@@ -85,4 +85,4 @@ jekyll_admin:
 
 #theme: jekyll-theme-midnight 雪花主题
 #theme: my-awesome-jekyll-theme #灯主题
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
