--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Basic
 title: 追梦抓梦
-subtitle:  男人炫耀的资本不是你现在有多少钱，有多大的权利。而是你经历了什么，越过了多大的坎，跳过了多深的坑照样一身傲气，最后完成了自己的梦想成家立业 。到那时你即使身无分文，出门人家也瞧得起你。人家可能会说，那个男孩当年是个搬砖的，现在一步一步爬成了一个大老板。而你开着保时捷跑在马路上横冲直撞，人家只会说这孩子当初穷的时候不坚持梦想，把自己的礼节、知识全搞丢了，走了错路。虽然有了钱，但也一无所有。    
+subtitle:  <a href="http://www.beian.gov.cn">蜀ICP备19031740号-2</a>    
 description: ~
 # 头像里面的标题
 avatarTitle: 追梦抓梦
 # 头像里面的描述
 avatarDesc: Never give up!  你的每一项专长都能为幸福铺路。
-url: "https://bbel.ink"
+url: "https://baituntech.cn"
 # Comment 评论
 comment:
     provider: duoshuo
