--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ blog_button:
 nav:
     - {title: 所有文章, description: archive, url: '/archive'}   
     - {title: 标签, description: tags, url: '/tags'}   
-    - {title: 留言, description: liuyan, url: '/liuyan'}
+# - {title: 留言, description: liuyan, url: '/liuyan'}
 #    - {title: 资源, description: ziyuan, url: '/ziyuan'}
 #    - {title: 关于我, description: about, url: '/about'}
 
