--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Basic
-title: 追梦抓梦
-subtitle:  <a href="http://www.beian.gov.cn">蜀ICP备19031740号-2</a>    
+title: 可见可思-追梦抓梦
+subtitle:  <a href="https://beian.miit.gov.cn/">蜀ICP备2023024629号-1</a>     版权所有:四川可见可思信息科技
 description: ~
 # 头像里面的标题
-avatarTitle: 追梦抓梦
+avatarTitle: 可见可思-追梦抓梦
 # 头像里面的描述
-avatarDesc: Never give up!  你的每一项专长都能为幸福铺路。
+avatarDesc: Never give up!  你的每一项专长都能为幸福铺路。 
 url: "https://baituntech.cn"
 # Comment 评论
 comment:
